<resources>
    <string name="app_name">TestApp</string>
    <string name="hello">けもフレ３やろう</string>
    <string name="test">追加したよ！</string>
    <string name="map_move_button">マップで見る</string>
    <string name="get_message">獲得できるスタンプがあるよ！</string>
    <string name="move_map">マップ</string>
    <string name="move_stamp">スタンプ一覧</string>
    <string name="text_name">Name</string>
    <string name="text_subject">Subject</string>
    <string name="information">Information</string>
    <string name="school_btn">TODO</string>
    <string name="map_btn">TODO</string>
    <string name="stamp_btn">TODO</string>
    <string name="modol_btn">TODO</string>
    <string name="bus_btn">TODO</string>
    <string name="info_btn">TODO</string>
    <string name="textView2">あとスタンプを7個集めると・・・</string>

    <string name="facility_name"><u>研究棟B</u></string>
    <string name="facility_name2"><u>施設名</u></string>

    <string name="title_activity_bustime">bustimeActivity</string>


</resources>
