<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="false">

    <FrameLayout
            android:id="@+id/whitearea"
            android:layout_width="0dp"
            android:layout_height="97dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

    </FrameLayout>

    <ImageButton
            android:id="@+id/school_btn"
            android:layout_width="71dp"
            android:layout_height="71dp"

            android:layout_marginStart="2dp"
            android:background="@drawable/toolbar_flame_style"
            android:contentDescription="@string/school_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/toolbar_school" />

    <ImageButton
            android:id="@+id/map_btn"
            android:layout_width="71dp"
            android:layout_height="71dp"

            android:background="@drawable/toolbar_flame_style"
            android:contentDescription="@string/map_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/toolbar_map" />

    <ImageButton
            android:id="@+id/stamp_btn"
            android:layout_width="71dp"
            android:layout_height="71dp"

            android:background="@drawable/toolbar_flame_style"
            android:contentDescription="@string/stamp_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/whitearea"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/toolbar_stamp" />

    <ImageButton
            android:id="@+id/info_btn"
            android:layout_width="71dp"
            android:layout_height="71dp"

            android:layout_marginTop="16dp"
            android:background="@drawable/toolbar_flame_style"
            android:contentDescription="@string/info_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/toolbar_info" />

    <ImageButton
            android:id="@+id/bus_btn"
            android:layout_width="71dp"
            android:layout_height="71dp"

            android:layout_marginEnd="2dp"
            android:background="@drawable/toolbar_flame_style"
            android:contentDescription="@string/bus_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/toolbar_bus" />

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="85dp"

            android:background="@drawable/toolbar_style"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="@+id/stamp_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    <!--
    <ImageView
            android:id="@+id/modol_btn"
            android:layout_width="30dp"
            android:layout_height="34dp"
            android:background="@drawable/toolbar_flame_style"
            android:contentDescription="@string/modol_btn"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.705"
            app:srcCompat="@drawable/toolbar_modol" />
     -->

    <ImageButton
            android:id="@+id/modol_btn"
            android:layout_width="41dp"
            android:layout_height="32dp"
            android:background="@drawable/toolbar_modoru_style"
            android:contentDescription="@string/modol_btn"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.785"
            app:srcCompat="@drawable/toolbar_modoru" />

    <TextView
            android:id="@+id/tytle"
            android:layout_width="195dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:color="#000000"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.025" />

    <View
            android:id="@+id/view"
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/whitearea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>