<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/facility_detaile_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingTop="50dp"
            android:paddingEnd="30dp"
            android:paddingBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/getMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_message"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

        <ImageView
                android:id="@+id/stampImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/facility_detaile_desain" />

        <TextView
                android:id="@+id/stampName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp"
                tools:text="ぱっちぃ名" />

        <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/facility_viewber" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/mapButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/facility_detaile_button"
                    android:stateListAnimator="@null"
                    android:text="@string/move_map"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

            <Button
                    android:id="@+id/stampButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/facility_detaile_button"
                    android:stateListAnimator="@null"
                    android:text="@string/move_stamp"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
            android:id="@+id/closeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/facility_detaile_close"
            android:stateListAnimator="@null"
            android:text="×"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>